--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <button class="btn" onclick="getRate(0)"> Get Bitcoin Price in USD </button>
 <button class="btn" onclick="getRate(1)"> Get Bitcoin Price in Pound </button>
 <button class="btn" onclick="getRate(2)"> Get Bitcoin Price in EURO </button>
+    <button class="btn" id="reset_id"> Reset </button>
 </div>
 </body>
 <script type="text/javascript" src="app.js"></script>
